--- a/style.css
+++ b/style.css
@@ -31,3 +31,36 @@ li a:hover {
 a {
   text-decoration: none;
 }
+
+h1 {
+  text-align: center;
+  color: white;
+  text-decoration: underline;
+}
+body {
+  background-color: purple;
+}
+
+ul {
+  list-style-type: none;
+  width: 100%;
+}
+p{
+  color: white;
+  
+}
+
+li a {
+  display: block;
+  color: white;
+   padding: 10px;
+   float: left;
+}
+
+li a:hover {
+  background-color: black;
+  font-size: 20px;
+}
+a {
+  text-decoration: none;
+}
